--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,35 @@
-# Ignore hidden files
-.*
+*.py[cod]
 
-# Ignore Vim swap files
-*.swp 
-*.swo
+# C extensions
+*.so
 
-# Python stuff
-*.pyc
-*.pyo
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
 
-# But do track the .gitignore file
-!.gitignore
+# Installer logs
+pip-log.txt
 
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
